--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 sprintf = "0.4.0"
+tokio = { version = "1", features = ["full"] }
 trust-dns-resolver = "0.23.2"
 url = "2.5.4"
 
