--- a/crates/multithreaded-async/Cargo.toml
+++ b/crates/multithreaded-async/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "learning-rust-multithreaded-async"
+name = "multithreaded-async"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 sprintf = "0.4.0"
-tokio = { version = "1", features = ["full"] }
+tokio = { workspace = true }
 trust-dns-resolver = "0.23.2"
 url = "2.5.4"
 
