--- a/crates/multithreaded-async/Cargo.toml
+++ b/crates/multithreaded-async/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 [dependencies]
 async-std-resolver = "0.24.2"
 tokio = { workspace = true }
+tokio-rustls = "0.26.1"
 url = "2.5.4"
+webpki-roots = "0.26.7"
 
