--- a/crates/webapp/Cargo.toml
+++ b/crates/webapp/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.9"
+serde = { version = "1.0.216", features = ["derive"] }
+thiserror = "2.0.9"
 tokio.workspace = true
 tower = "0.5.2"
