--- a/crates/webapp/Cargo.toml
+++ b/crates/webapp/Cargo.toml
@@ -10,3 +10,4 @@ thiserror = "2.0.9"
 tokio.workspace = true
 tokio-util = { version = "0.7.13", features = ["io"]}
 tower = "0.5.2"
+tower-http = {version="0.6.2", features = ["fs"]}
