--- a/crates/webapp/Cargo.toml
+++ b/crates/webapp/Cargo.toml
@@ -3,6 +3,10 @@ name = "webapp"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default-features = ["parser"]
+parser = []
+
 [dependencies]
 axum = "0.7.9"
 chrono = {version = "0.4.39", features = ["alloc"]}
