--- a/crates/webapp/Cargo.toml
+++ b/crates/webapp/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default-features = ["parser"]
+default = ["parser"]
 parser = []
 
 [dependencies]
