--- a/crates/sfmacro/Cargo.toml
+++ b/crates/sfmacro/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+proc-macro2 = "1.0.92"
 quote = "1.0.38"
 syn = {version = "2.0.95", features = ["full"]}
+trybuild = "1.0.101"
