--- a/crates/webapp/Cargo.toml
+++ b/crates/webapp/Cargo.toml
@@ -19,3 +19,4 @@ tokio-util = { version = "0.7.13", features = ["io"]}
 tower = "0.5.2"
 tower-http = {version="0.6.2", features = ["fs"]}
 sfmacro = {path = "../sfmacro"}
+reqwest.workspace = true
