--- a/crates/actixweb/Cargo.toml
+++ b/crates/actixweb/Cargo.toml
@@ -10,3 +10,5 @@ thiserror = "2.0.9"
 tokio-util = "0.7.13"
 serde = { version = "1.0", features = ["derive", "std"] }
 serde_json = "1.0.137"
+tracing = { version = "0.1", features = ["attributes"]}
+tracing-subscriber = "0.3"
