--- a/crates/actixweb/Cargo.toml
+++ b/crates/actixweb/Cargo.toml
@@ -11,4 +11,4 @@ tokio-util = "0.7.13"
 serde = { version = "1.0", features = ["derive", "std"] }
 serde_json = "1.0.137"
 tracing = { version = "0.1", features = ["attributes"]}
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["chrono"]}
